--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@
   }
   header {
     position: fixed;
+    top: 0;
     z-index: 2;
     width: 100%;
     background-color: gainsboro;
@@ -87,6 +88,7 @@
   
   .dropdown {
     margin-top: 6px;
+    padding-right: 20px;
     position: relative;
     display: inline-block;
   }
@@ -176,13 +178,14 @@
     font-size: 24px;
     font-family: sans-serif;
   }
-  form {
+  .heroForm {
     margin-top: 40px;
   }
   #searchInput {
     position: relative;
     padding: 10px 20px;
     width: 300px;
+    outline: none;
     font-size: 16px;
     border: 2px solid #feab29;
     border-radius: 8px;
@@ -307,7 +310,6 @@
     top: 0;
     right: 0;
     left: 40px;
-    padding: 3px;
     height: 20px;
     width: 20px;
     line-height:20px ;
@@ -316,7 +318,6 @@
   }
   
   #cart-icon{
-    margin-left: 20px;
     border-radius: 5px;
     font-size: 1.6rem;
     cursor: pointer;
@@ -408,7 +409,7 @@
     
   .cart{
     position: fixed;
-    top: 78px;
+    top: 74px;
     right: -125%;
     width: 90%;
     max-width: 300px;
@@ -601,6 +602,7 @@
     width: 70%;
   }
   .subcribe-input h1 {
+    padding-bottom: 20px;
     font-size: 26px;
     font-family: sans-serif;
   }
@@ -612,6 +614,8 @@
     position: relative;
   }
   .subs-input {
+    padding: 10px 20px;
+    border-radius: 10px;
     background-color: #3a8276;
     outline: none;
     border: 1px solid #fff;
@@ -773,60 +777,5 @@
     }
   }
   /*gallery end*/
-  /* for login page */
-  .form {
-    border-radius: 10px;
-    border: 2px solid lightblue;
-    margin: 50px auto;
-    width: 300px;
-    padding: 20px;
-    background: white;
-  }
-  h1.login-title {
-    font-family: sans-serif;
-    color: #666;
-    margin: 0px auto 25px;
-    font-size: 25px;
-    font-weight: 300;
-    text-align: center;
-  }
-  .login-input {
-    font-size: 15px;
-    border-radius: 10px;
-    border: 1px solid #ccc;
-    padding: 10px 20px;
-    margin-bottom: 15px;
-    width: 100%;
-  }
-  .login-input:focus {
-    border-color:#6e8095;
-    outline: none;
-  }
-  .login-button {
-    border-radius: 10px;
-    color: #fff;
-    background: #55a1ff;
-    border: 0;
-    outline: 0;
-    padding: 10px 20px;
-    width: 100%;
-    font-size: 16px;
-    text-align: center;
-    cursor: pointer;
-  }
-  .link {
-    margin-top: 15px;
-    color: #666;
-    font-size: 15px;
-    text-align: center;
-    margin-bottom: 0px;
-  }
-  h3 {
-
-    font-weight: normal;
-    text-align: center;
-  }
-  .form.addlogin {
-    display: block;
-  }
+  
   
