--- a/style.css
+++ b/style.css
@@ -46,7 +46,8 @@
   }
   #menu li {
     list-style: none;
-    padding: 8px 25px 0px 15px;
+    padding-top: 15px;
+    padding-left: 12px;
   }
   #menu li .nav__link {
     position: relative;
@@ -88,10 +89,11 @@
   }
   
   .dropdown {
-    margin-top: 6px;
+    margin-top: 15px;
     padding-right: 20px;
     position: relative;
     display: inline-block;
+    padding-left: 12px;
   }
 
   
@@ -131,18 +133,21 @@
       transition: right 0.6s;
     }
     #menu {
-      margin-top: 30px;
+      margin-top: 52px;
+      padding-top: 10px;
       flex-direction: column;
       justify-content: center;
+      padding-left: 20px;
+      border-top: 1px solid rgba(0,0,0,0.1);
     }
     .navToggle {
       display: block;
       font-size: 30px;
     }
-    .navClose {
+    .navClose{
       position: absolute;
-      top: 1.5rem;
-      right: 1.5rem;
+      top: -28px;
+      right: 2rem;
       display: block;
       font-size: 30px;
     }
@@ -331,10 +336,9 @@
   }
   
   .container{
-    margin: auto;
     width: 100%;
   }
-  
+
   .food-header {
     font-size: 40px;
     font-family: sans-serif;
@@ -526,9 +530,19 @@
     font-size: 2rem;
     cursor: pointer;
   }
-  @media(max-width:768px) {
+  @media(max-width:576px){
+    .shop-content{
+      grid-template-columns: 1fr;
+    }
+  }
+  @media(min-width:577px) and (max-width:768px) {
     .shop-content {
-      grid-template-columns: auto;
+      grid-template-columns: repeat(2,1fr);
+    }
+  }
+  @media(min-width:769px) and (max-width:1024px){
+    .shop-content {
+      grid-template-columns: repeat(3,1fr);
     }
   }
   /*card end*/
@@ -542,7 +556,7 @@
     align-items: center;
   }
   .submitText h1 {
-    font-size: 60px;
+    font-size: 40px;
     font-family: sans-serif;
   }
   .subBtn {
@@ -592,6 +606,8 @@
   .footer-content {
     display: flex;
     margin-top: 30px;
+    align-items: center;
+    gap: 20px;
   }
   .para {
     width: 70%;
@@ -605,15 +621,23 @@
   }
   .subcribe-input h1 {
     padding-bottom: 20px;
-    font-size: 26px;
+    font-size: 20px;
     font-family: sans-serif;
   }
   .subsInput {
     gap: 10px;
     display: flex;
   }
+
+  @media(max-width:375px){
+    .group-input{
+      flex-direction: column;
+    }
+  }
   .group-input {
     position: relative;
+    display: flex;
+    gap: 10px;
   }
   .subs-input {
     padding: 10px 20px;
@@ -679,13 +703,9 @@
     padding: 10px 0px 10px 0px;
     font-family: sans-serif;
     color: #fff;
-    text-align: center;
+    width: 100%;
   }
-  @media (max-width: 768px) {
-    .footer-content {
-      flex-direction: column;
-      gap: 30px;
-    }
+  @media(min-width:577px) and (max-width:768px){
     .subcribe-input {
       width: 100%;
     }
@@ -698,6 +718,11 @@
     .footer-list ul {
       flex-direction: column;
       gap: 20px;
+    } 
+  }
+  @media (max-width: 576px) {
+    .footer-content {
+      flex-direction: column;
     }
   }
   /*footer end*/
@@ -783,4 +808,69 @@
   
 .btn {
   border: none;
+}
+.author{
+  text-align: center;
+}
+
+.various_page{
+  padding-top: 150px;
+}
+
+.various_container{
+  width: 80%;
+  margin: 0 auto;
+}
+
+.services_content{
+  display: grid;
+  grid-template-columns: repeat(3,1fr);
+  gap: 20px;
+}
+
+.services_card{
+  border: 1px solid rgba(0, 0, 0, .1);
+  padding: 20px 30px 25px 30px;
+  border-radius: 10px;
+  text-align: center;
+}
+
+.services_icon{
+  background-color: rgba(254, 171, 41, .2);
+  width: 50px;
+  border-radius: 50%;
+  margin: 0 auto;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.services_icon i{
+font-size: 25px;
+color: #feab29;
+
+}
+
+.services_body h3{
+font-size: 22px;
+font-family: sans-serif;
+font-weight: 600;
+margin-top: 25px;
+margin-bottom: 8px;
+}
+
+.services_body p{
+  font-family: sans-serif;
+}
+
+@media(max-width: 768px){
+  .services_content{
+    grid-template-columns: 1fr;
+  }
+}
+
+@media(min-width:769px) and (max-width:1024px){
+  .services_content{
+    grid-template-columns: repeat(2,1fr);
+  }
 }
