--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@
       transform: translateY(0);
     }
   }
+  
   header {
     position: fixed;
     top: 0;
@@ -23,6 +24,7 @@
     width: 100%;
     background-color: gainsboro;
   }
+  
   .nav-logo {
     color: #feab29;
     font-family: sans-serif;
@@ -30,25 +32,30 @@
     text-decoration: none;
     font-size: 30px;
   }
+  
   .nav-logo span {
     color: black;
   }
+  
   .navbar {
     padding: 20px 0px 20px 0px;
     width: 80%;
     margin: 0 auto;
     display: flex;
     justify-content: space-between;
+    align-items: center;
   }
+  
   #menu {
     position: relative;
     display: flex;
   }
+  
   #menu li {
     list-style: none;
-    padding-top: 15px;
-    padding-left: 12px;
+    padding: 0 30px;
   }
+  
   #menu li .nav__link {
     position: relative;
     color: black;
@@ -56,31 +63,43 @@
     font-size: 20px;
     text-decoration: none;
   }
+  
   #menu li .nav__link.active {
     color: orangered;
   }
+  
   #menu li .nav__link::after {
     content: "";
     position: absolute;
     background-color: orangered;
     height: 3px;
     width: 0;
-    left: 0;
-    top: 25px;
+    left: 50%;
+    bottom: -10px;
+    transform: translate(-50%, -50%);
     transition: 0.5s;
   }
-  #menu li .nav__link:hover {
-  color: red;
+  
+  #menu li .nav__link.active::after {
+    width: 100%;
   }
+  
+  #menu li .nav__link:hover {
+    color: red;
+  }
+  
   #menu li .nav__link:hover::after {
     width: 100%;
   }
+  
   .navClose {
     display: none;
   }
+  
   .navToggle {
     display: none;
   }
+  
   #dropbtn {
     color: #2f3542;
     font-size: 25px;
@@ -89,20 +108,19 @@
   }
   
   .dropdown {
-    margin-top: 15px;
     padding-right: 20px;
     position: relative;
     display: inline-block;
     padding-left: 12px;
   }
-
+  
   
   .dropdown-content {
     display: none;
     position: absolute;
     background-color: #f9f9f9;
     min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     z-index: 1;
   }
   
@@ -132,34 +150,52 @@
       background-color: lightgrey;
       transition: right 0.6s;
     }
+  
     #menu {
       margin-top: 52px;
       padding-top: 10px;
       flex-direction: column;
-      justify-content: center;
-      padding-left: 20px;
-      border-top: 1px solid rgba(0,0,0,0.1);
+      border-top: 1px solid rgba(0, 0, 0, 0.1);
+    }
+    #menu li {
+      padding-bottom: 20px;
+    }
+    #menu li .nav__link {
+      padding: 10px 100% 10px 0;
+    }
+    #menu li .nav__link.active {
+      padding: 10px;
+      background-color: orangered;
+      color: white;
+      display: block;
+    }
+    #menu li .nav__link::after {
+      position: unset;
     }
     .navToggle {
       display: block;
       font-size: 30px;
     }
-    .navClose{
+  
+    .navClose {
       position: absolute;
       top: -28px;
       right: 2rem;
       display: block;
       font-size: 30px;
     }
+  
     .nav-content.active {
       right: 0%;
     }
   }
+  
   @media (min-width: 769px) {
     .nav-content {
       max-width: 100%;
     }
   }
+  
   /*hero section start*/
   .hero-container {
     padding-top: 70px;
@@ -237,65 +273,57 @@
     }
   }
   /*hero section end*/
+
   /*food carousel start*/
-  .owl-carousel {
-      border-radius: 20px;
-      width: 80%;
-      margin: 0 auto;
-      padding: 0px 30px 0px 30px;
-      background-color: #ffe195;
+  .container_swiper{
+    width: 80%;
+    margin: 0 auto;
+    background-color: #feab29;
+    border-radius: 20px;
+    padding: 30px 50px;
+    position: relative;
   }
-  .item .foodimages {
-      margin: 30px 0px 30px 0px;
-      width: 150px;
-  }
-  .item .foodimages img {
-      border-radius: 50%;
-      width: 150px;
-      height: 150px;
-      transition: .3s ease;
-  }
-  .item .foodimages img:hover {
-      transform: scale(0.8);
-  }
-  .owl-carousel .owl-nav button.owl-prev, .owl-carousel .owl-nav button.owl-next{
-      background: #feab29; 
-       width: 30px;
-       height: 30px;
-       color: white;
-       border-radius: 50%;
-       position: absolute;
-       top: 43%;
-       opacity: 0;
-       transition: opacity linear 300ms;
-     }
-     
-     .owl-carousel:hover .owl-nav button.owl-prev, .owl-carousel:hover .owl-nav button.owl-next{
-       opacity: 1;
-     }
-     
-     .owl-carousel .owl-nav button.owl-prev{
-       left: -15px;
-     }
-     
-     .owl-carousel .owl-nav button.owl-next{
-       right: -15px;
-     }
-     .owl-carousel .owl-nav.disabled {
-      display: block;
-     }
-     .owl-carousel button.owl-dot {
-      display: none;
-     }
-     .item h4 {
-      position: absolute;
-      top: 88%;
-      left: 28%;
+   .swiper {
+      width: 100%;
+      height: 100%;
+    }
+
+    .swiper-slide {
       text-align: center;
       font-family: sans-serif;
-      font-weight: 600;
-      color: black;
-     }
+    }
+    
+    .item_image img{
+      width: 125px;
+      height: 125px;
+      border-radius: 50%;
+      object-fit: cover;
+    }
+    .swiper-button-prev::after, .swiper-button-next::after{
+      content: "";
+    }
+    .foodNext{
+      position: absolute;
+      right: -15px;
+      background-color: black;
+      height: 30px;
+      width: 30px;
+      border-radius: 50%;
+    }
+    .foodNext i{
+      color: white;
+    }
+    .foodPrev{
+      position: absolute;
+      left: -15px;
+      background-color: black;
+      height: 30px;
+      width: 30px;
+      border-radius: 50%;
+    }
+    .foodPrev i{
+      color: white;
+    }
      /*carousel end*/
   .nav{
     max-width: 1200px;
@@ -726,6 +754,7 @@
     }
   }
   /*footer end*/
+
   /*gallery start*/
   .gallery-container {
     padding-top: 90px;
@@ -798,9 +827,14 @@
     margin-top: 0;
     display: block;
   }
-  @media (max-width: 768px) {
-    .galleryImg {
+  @media(max-width: 425px){
+    .galleryImg{
       grid-template-columns: auto;
+    }
+  }
+  @media(min-width: 425px) and (max-width: 768px) {
+    .galleryImg {
+      grid-template-columns: repeat(2,1fr);
     }
   }
   /*gallery end*/
